--- a/assets/less/layout-admin.less
+++ b/assets/less/layout-admin.less
@@ -30,7 +30,13 @@
   padding: 10px 5px;
   margin: 12px -12px;
   .component {
+    margin: 10px;
+  }
+  div.component {
     .componentUI();
+    &.template {
+      background: #fff;
+    }
   }
   .row {
     border: 1px dashed #E8E8E8;
